@@ -34,7 +34,6 @@ Config = {
 		iHealthBar = {
 			Type = iHealthBar,
 			Direction = "rest",
-			Property = { UseSmoothColor = true },
 		},
 		MyHealPredictionBar = {
 			Type = MyHealPredictionBar,
